--- a/exercise4_classes/solution/test_notebook.ipynb
+++ b/exercise4_classes/solution/test_notebook.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "466ca32a",
+   "id": "0eb34b8d",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
    "id": "283ae4d7",
    "metadata": {},
    "source": [
-    "# Optional part 2: Hashable type"
+    "# Optional part : Hashable type"
    ]
   },
   {
