Added part of the report

--- a/exercise4_classes/solution/test_notebook.ipynb
+++ b/exercise4_classes/solution/test_notebook.ipynb
@@ -692,7 +692,7 @@
    "id": "9b57222c",
    "metadata": {},
    "source": [
-    "# Optional part 1: my numerator/denominator search algorithm"
+    "# Optional part: my numerator/denominator search algorithm"
    ]
   },
   {
